feat: Created project layers

--- a/ProEventos.API/ProEventos.API.csproj
+++ b/ProEventos.API/ProEventos.API.csproj
@@ -22,4 +22,8 @@
       <Compile Remove="WeatherForecast.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ProEventos.Application\ProEventos.Application.csproj" />
+    </ItemGroup>
+
 </Project>
