--- a/ProEventos.Persistence/ProEventos.Persistence.csproj
+++ b/ProEventos.Persistence/ProEventos.Persistence.csproj
@@ -8,4 +8,17 @@
       <ProjectReference Include="..\ProEventos.Domain\ProEventos.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Class1.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
