--- a/ProEventos.Application/ProEventos.Application.csproj
+++ b/ProEventos.Application/ProEventos.Application.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="DTOs\PalestranteEventoDto.cs" />
+    </ItemGroup>
+
 </Project>
